--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,14 +7,15 @@
 
 {% block content %}
 
-<h1>{% trans "Sign In" %}</h1>
+<h1>登录</h1>
 
 {% get_providers as socialaccount_providers %}
 
 {% if socialaccount_providers %}
-<p>{% blocktrans with site.name as site_name %}Please sign in with one
-of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+{#<p>{% blocktrans with site.name as site_name %}Please sign in with one#}
+{#of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>#}
+{#for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>#}
+请在下方登录或使用第三方登录:
 
 <div class="socialaccount_ballot">
 
@@ -22,7 +23,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
     {% include "socialaccount/snippets/provider_list.html" with process="login" %}
   </ul>
 
-  <div class="login-or">{% trans 'or' %}</div>
+{#  <div class="login-or">{% trans 'or' %}</div>#}
 
 </div>
 
@@ -39,8 +40,8 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">忘记密码?</a>
+  <button class="primaryAction" type="submit">登录</button>
 </form>
 
 {% endblock %}
